--- a/project.config.json
+++ b/project.config.json
@@ -4,13 +4,21 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
+		"coverView": true,
 		"autoAudits": false,
-		"coverView": true
+		"checkInvalidKey": true,
+		"checkSiteMap": true,
+		"uploadWithSourceMap": true,
+		"babelSetting": {
+			"ignore": [],
+			"disablePlugins": [],
+			"outputPath": ""
+		}
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.9.4",
@@ -168,6 +176,20 @@
 					"id": -1,
 					"name": "个人信息",
 					"pathName": "pages/myself/person_info/person_info",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/myself/my_certification/verified/verified",
+					"pathName": "pages/myself/my_certification/verified/verified",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "择偶意向编辑",
+					"pathName": "pages/myself/introduction/mate_choice/mate_choice",
 					"query": "",
 					"scene": null
 				}
