--- a/project.config.json
+++ b/project.config.json
@@ -166,10 +166,10 @@
 					"scene": null
 				},
 				{
-					"id": -1,
+					"id": 16,
 					"name": "个人介绍（他人）",
 					"pathName": "pages/introduction/introduction",
-					"query": "",
+					"query": "id=4",
 					"scene": null
 				},
 				{
@@ -204,6 +204,7 @@
 					"id": -1,
 					"name": "匹配结果",
 					"pathName": "pages/index/list/list",
+					"query": "",
 					"scene": null
 				}
 			]
