--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
     "pages/myself/person_info/person_info",
     "pages/myself/introduction/mate_choice/mate_choice",
     "pages/single/user_single/user_single",
-    "pages/message/list/list"
+    "pages/message/list/list",
+    "pages/music/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
