--- a/project.config.json
+++ b/project.config.json
@@ -248,6 +248,13 @@
 					"pathName": "pages/music/audio/audio",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": 28,
+					"name": "裁切",
+					"pathName": "pages/myself/introduction/cropper_img/cropper_img",
+					"query": "src=http://tmp/wx4da35c771f33c40d.o6zAJs538SKDTSH0ur9DVpfRhJhw.NzyKxcZkRrxG0ff8727b1dd60ebc7621a929b307f3a0.png",
+					"scene": null
 				}
 			]
 		}
