--- a/app.json
+++ b/app.json
@@ -78,6 +78,7 @@
       }
     ]
   },
+  "requiredBackgroundModes":["audio"],
   "permission": {
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
