--- a/project.config.json
+++ b/project.config.json
@@ -255,6 +255,13 @@
 					"pathName": "pages/myself/introduction/cropper_img/cropper_img",
 					"query": "src=http://tmp/wx4da35c771f33c40d.o6zAJs538SKDTSH0ur9DVpfRhJhw.NzyKxcZkRrxG0ff8727b1dd60ebc7621a929b307f3a0.png",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "音频详情",
+					"pathName": "pages/music/audio/audio",
+					"query": "id=4",
+					"scene": null
 				}
 			]
 		}
