--- a/pages/single/release/release.json
+++ b/pages/single/release/release.json
@@ -1,4 +1,6 @@
 {
-  "usingComponents": {},
+  "usingComponents": {
+    "mp-actionSheet": "../../../component/actionsheet/actionsheet"
+  },
   "navigationBarTitleText": "发布"
 }
