--- a/app.json
+++ b/app.json
@@ -33,7 +33,8 @@
     "pages/friends/friends/friends",
     "pages/music/audio/audio",
     "pages/friends/index",
-    "pages/myself/introduction/cropper_img/cropper_img"
+    "pages/myself/introduction/cropper_img/cropper_img",
+    "pages/music/video/video"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -78,7 +79,9 @@
       }
     ]
   },
-  "requiredBackgroundModes":["audio"],
+  "requiredBackgroundModes": [
+    "audio"
+  ],
   "permission": {
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
