--- a/project.config.json
+++ b/project.config.json
@@ -18,7 +18,8 @@
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
-		}
+		},
+		"enhance": true
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.9.4",
@@ -104,13 +105,6 @@
 				},
 				{
 					"id": -1,
-					"name": "匹配结果",
-					"pathName": "pages/match/list/list",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
 					"name": "精准匹配",
 					"pathName": "pages/index/exact_match/exact_match",
 					"query": "",
@@ -159,10 +153,10 @@
 					"scene": null
 				},
 				{
-					"id": 16,
+					"id": 14,
 					"name": "个人介绍（他人）",
 					"pathName": "pages/introduction/introduction",
-					"query": "id=7",
+					"query": "id=12",
 					"scene": null
 				},
 				{
@@ -243,10 +237,10 @@
 					"scene": null
 				},
 				{
-					"id": 28,
+					"id": 26,
 					"name": "裁切",
 					"pathName": "pages/myself/introduction/cropper_img/cropper_img",
-					"query": "src=http://tmp/wx4da35c771f33c40d.o6zAJs538SKDTSH0ur9DVpfRhJhw.NzyKxcZkRrxG0ff8727b1dd60ebc7621a929b307f3a0.png",
+					"query": "src=http://tmp/wx4da35c771f33c40d.o6zAJs538SKDTSH0ur9DVpfRhJhw.qfc6I1YR1jNW87f9fdff739b6f10c50aa2ef4d9dc68f.png",
 					"scene": null
 				},
 				{
@@ -282,6 +276,13 @@
 					"name": "匹配结果",
 					"pathName": "pages/index/list/list",
 					"query": "url=sysMatch",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "心动列表",
+					"pathName": "pages/message/list/list",
+					"query": "name=liked",
 					"scene": null
 				}
 			]
